.archive/gateway-api/gateways/internal/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: 192.168.1.130
    lbipam.cilium.io/ips: 192.168.1.130
  labels:
    gateway-label: internal-gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.130
  listeners:
    # catch all local http -> https
    - name: http-redirect
      hostname: "*.local.${CLUSTER_DOMAIN}"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # Catch traffic for Grafana Dashboard
    - name: grafana
      hostname: grafana.local.${CLUSTER_DOMAIN}
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-altena-io
    # catch traffic for the prometheus dashboard
    - name: prometheus
      hostname: prometheus.local.${CLUSTER_DOMAIN}
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-altena-io
    # catch traffic for the alertmanager dashboard
    - name: alertmanager
      hostname: alertmanager.local.${CLUSTER_DOMAIN}
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-altena-io
    # catch traffic for the jellyseerr dashboard
    - name: jellyseerr
      hostname: jellyseerr.local.${CLUSTER_DOMAIN}
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: jellyseerr-altena-io
